Implemented a decision tree. Successfully played a game as expected (seed 30111022), but further testing requried.

--- a/HuntTheWumpus/HuntTheWumpus.vcxproj
+++ b/HuntTheWumpus/HuntTheWumpus.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Room.h" />
+    <ClInclude Include="Route.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agent.cpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Room.cpp" />
+    <ClCompile Include="Route.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
