--- a/HuntTheWumpus/HuntTheWumpus.vcxproj.filters
+++ b/HuntTheWumpus/HuntTheWumpus.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Agent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Route.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Map.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Agent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Route.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
